<resources>
    <string name="app_name">Newer News</string>
    <string name="title_home">Home</string>
    <string name="title_news_feed">News Feed</string>
    <string name="title_hot_search">Hot Search</string>
    <string name="title_board">Chat</string>
    <string name="title_my_page">My Page</string>
    
    <string name="title_onboarding">Welcome to Newer News</string>
    <string name="contents_onboarding">Our neighborhood news in my hand</string>

    <string name="request_permission_location">Please allow the location permission.</string>

    <string name="start">Start</string>

    <string name="login">Sign in</string>
    <string name="login_id">ID</string>
    <string name="login_pw">PW</string>
    <string name="login_fail">Fail login.</string>

    <string name="sign_up">Sign up</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="password_re">Re enter Password</string>
    <string name="nickname">Nick name</string>
    <string name="sign_up_success">Success!</string>
    <string name="sign_up_password_unmatched">The passwords are different. Please check again.</string>
    <string name="sign_up_fail">Fail</string>

    <string name="home_info_hello">Hello. </string>
    <string name="home_info_hello_end">,</string>
    <string name="home_info_location">The current location is </string>
    <string name="home_info_location_end">.</string>
    <string name="home_info_weather">%s Weather</string>

    <string name="weather_temp_format">%d°C</string>
    <string name="weather_feels_like_temp">Sensory temperature: %d°C</string>

    <string name="news_title_format">%s news</string>

    <string name="time_now">Now</string>
    <string name="time_min_ago">minutes ago</string>
    <string name="time_hours_ago">hours ago</string>

    <string name="send_chat">Send</string>

    <string name="hot_location">Hot Location</string>
    <string name="hot_news">Hot News</string>

    <string name="chat_title">What\'s happening in %s right now?</string>

    <string name="my_page">My Page</string>
    <string name="my_page_hello">Hello, %s.</string>

    <string name="my_page_like_news">Favorite article</string>
    <string name="my_page_hate_news">Hate article</string>
    <string name="my_page_version_info">Version info</string>

    <string name="empty_like_news">There is no article you like.\nPress like in the news feed!</string>
    <string name="empty_hate_news">There is no article you hate.</string>

    <string name="logout">Logout</string>

</resources>