<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/selector_home_button"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_news_feed"
        android:icon="@drawable/selector_news_feed_button"
        android:title="@string/title_news_feed" />

    <item
        android:id="@+id/navigation_hot_search"
        android:icon="@drawable/selector_hot_search_button"
        android:title="@string/title_hot_search" />

    <item
        android:id="@+id/navigation_board"
        android:icon="@drawable/selector_board_button"
        android:title="@string/title_board"/>

    <item
        android:id="@+id/navigation_my_page"
        android:icon="@drawable/selector_my_page_button"
        android:title="@string/title_my_page"/>

</menu>