<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.paasta.newernews.presentation.ui.mainfragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_news_feed"
        android:name="com.paasta.newernews.presentation.ui.mainfragment.newsfeed.NewsFeedFragment"
        android:label="@string/title_news_feed"
        tools:layout="@layout/fragment_news_feed" />

    <fragment
        android:id="@+id/navigation_hot_search"
        android:name="com.paasta.newernews.presentation.ui.mainfragment.hotsearch.HotSearchFragment"
        android:label="@string/title_hot_search"
        tools:layout="@layout/fragment_hot_search" />

    <fragment
        android:id="@+id/navigation_board"
        android:name="com.paasta.newernews.presentation.ui.mainfragment.chat.ChatFragment"
        android:label="@string/title_board"
        tools:layout="@layout/fragment_chat"/>

    <fragment
        android:id="@+id/navigation_my_page"
        android:name="com.paasta.newernews.presentation.ui.mainfragment.mypage.MyPageFragment"
        android:label="@string/title_my_page"
        tools:layout="@layout/fragment_my_page"/>
</navigation>