<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/layout_sign_up"/>

        <EditText
            android:id="@+id/et_sign_up_email"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/et_sign_up_pw"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.3"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/et_sign_up_pw"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_sign_up_email"
            app:layout_constraintBottom_toTopOf="@id/et_sign_up_pw_re"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/et_sign_up_pw_re"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_sign_up_pw"
            app:layout_constraintBottom_toTopOf="@id/et_sign_up_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:hint="@string/password_re"/>

        <EditText
            android:id="@+id/et_sign_up_name"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_sign_up_pw_re"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:hint="@string/nickname" />
        
        <Button
            android:id="@+id/btn_sign_up_submit"
            android:layout_width="270dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/et_sign_up_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:backgroundTint="@color/main_color"
            android:textColor="@color/white"
            android:outlineProvider="none"
            android:text="@string/sign_up"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/signup_progress_bar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>