<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:src="@drawable/newer_news_logo"
        app:layout_constraintVertical_bias="0.1"/>


    <EditText
        android:id="@+id/login_id"
        android:layout_width="350dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_pw"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@android:drawable/editbox_background"
        android:inputType="text"
        android:textColor="@color/black"
        android:hint="@string/email"
        app:layout_constraintVertical_chainStyle="packed"/>

    <EditText
        android:id="@+id/login_pw"
        android:layout_width="350dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/login_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/editbox_background"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:hint="@string/login_pw" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_pw"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="@color/main_color"
        android:text="@string/login"
        app:layout_constraintVertical_chainStyle="packed"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/main_color"
        android:text="@string/sign_up"
        app:layout_constraintVertical_chainStyle="packed"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"/>



</androidx.constraintlayout.widget.ConstraintLayout>