<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/sub_background_color">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_my_page"
        android:layout_width="0dp"
        android:layout_height="130dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_my_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintVertical_bias="0.05"
                app:layout_constraintHorizontal_bias="0.05"
                android:textColor="@color/default_text_color"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/my_page"/>

            <ImageView
                android:id="@+id/iv_my_page_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:layout_constraintTop_toBottomOf="@id/tv_my_page"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_my_page_name"
                android:src="@drawable/ic_like_on"/>

            <TextView
                android:id="@+id/tv_my_page_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/iv_my_page_image"
                app:layout_constraintBottom_toTopOf="@id/tv_my_page_email"
                app:layout_constraintLeft_toRightOf="@id/iv_my_page_image"
                app:layout_constraintRight_toRightOf="parent"
                android:textColor="@color/default_text_color"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/my_page_hello"/>

            <TextView
                android:id="@+id/tv_my_page_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_my_page_name"
                app:layout_constraintBottom_toBottomOf="@id/iv_my_page_image"
                app:layout_constraintLeft_toLeftOf="@id/tv_my_page_name"
                android:text="nadiapla7@gmail.com"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cv_my_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:elevation="0dp"
            android:background="@color/white"
            android:textColor="@color/default_text_color"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/my_page_like_news"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>